# py-googletransx

./: .bumpversion.cfg  .gitignore  pyproject.toml  setup.cfg  setup.py
.github/workflows/: publish.yaml
example/: translate_word_doc.py
googletrans2/: __init__.py  client.py  gtoken.py
googletransx/: __init__.py  translate.py
